# roel

./: .gitignore  START-STACK.bat  check-stack.ps1  package-lock.json  start-copilot.ps1  start-ui.ps1  stop-stack.ps1  verify-main-flow.ps1
.github/: copilot-instructions.md
zero-main/: .gitignore  NOTEBOOKLM_AUDIO_NARRATIVE.md  README.md  Start-ProjectZero-STOP.cmd  Start-ProjectZero.cmd  Start-ProjectZero.ps1  start-orchestrator.sh  start-windows.ps1
zero-main/.github/: copilot-instructions.md
zero-main/imessage_orchestrator/: main.py  orchestrator.py  requirements.txt  ui.py
zero-main/imessage_orchestrator/config/: __init__.py  prompts.py  prompts_analyst_fact_extraction.py  prompts_analyst_pre_response.py  prompts_analyst_strategic.py  prompts_analyst_summarization.py  prompts_analyst_trajectory.py  (+2 more)
zero-main/lotl/: .env.example  .gitignore  AI_STUDIO_SYSTEM_PROMPT.txt  API.md  LICENSE  PACKAGE_README.md  README.md  api-schema.json  click-run.js  debug-aistudio.js  debug-selectors.js  debug-upload-selectors.js  lotl-controller-v3.js  lotl_client.py  new-chat.js  package-lock.json  package.json  pyproject.toml  test-client.js  test-connection.js  test-copilot.js  test-math.js  test-page.js  test-send.js  test-working.js  test_controller.py  test_gemini_debug.js  test_server.js  verify_endpoints.ps1
zero-main/lotl/lotl/: __init__.py  cli.py  client.py  controller.py  langchain.py
zero-main/lotl/scripts/: capture-aistudio.png.js  debug-aistudio-a11y-search.js  debug-aistudio-chunks.js  debug-aistudio-dom-scan.js  debug-aistudio-dom-snapshot.js  debug-aistudio-text.js  debug-gemini-capture.js  launch-chrome.js  stability_check.ps1  start-controller.js  start-instance.ps1  start-instance.sh
zero-main/lotl/tests/: test_lotl.py
(+19 files in other folders)
