[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotl"
version = "2.0.0"
description = "Living off the Land - Route AI prompts through logged-in browser sessions"
readme = "PACKAGE_README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LotL Contributors" }
]
keywords = [
    "ai",
    "llm", 
    "gemini",
    "api",
    "browser",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
all = [
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
lotl = "lotl.cli:main"

[project.urls]
Homepage = "https://github.com/lotl/lotl"
Documentation = "https://github.com/lotl/lotl#readme"
Repository = "https://github.com/lotl/lotl"

[tool.hatch.build.targets.wheel]
packages = ["lotl"]

[tool.hatch.build.targets.sdist]
include = [
    "lotl/",
    "PACKAGE_README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
